# rumor

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac
doc/: Makefile.am  drums.scm  hmoll_prael0.eps  hmoll_prael0.txt  hmoll_prael1.eps  hmoll_prael1.txt  kbd.scm  rhythm68.scm  rumor.texi
src/: Makefile.am  alsaclient.cc  guile2cc.cc  guile2cc.hh  kbdclient.cc  lang.hh  metronome.cc  notator.cc  note.cc  options.cc  ossclient.cc  rumor.cc  rumor.hh
